Ajustando tamanho da imagem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,6 @@ aws.access_key_id=AKIAIOAKKB7OKLEHGNZA
 aws.secret_access_key=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
 s3.bucket=app-sistema-pedido
 s3.region=sa-east-1
+
 img.prefix.client.profile=cp
+img.profile.size=200
